--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.E22Peliculas" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyToDo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,18 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.E22Peliculas.NoActionBar">
+    <style name="Theme.MyToDo.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.E22Peliculas.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.MyToDo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.E22Peliculas.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-    <style name="word_title">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
+    <style name="Theme.MyToDo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
